--- a/templates/index.html
+++ b/templates/index.html
@@ -47,13 +47,9 @@
                 System</h1>
 
             <p class="py-6" style="color: #191825; font-weight: 750; font-size: medium; line-height: 2;">
-                Welcome to our dispensary management system website! We provide an all-in-one solution for dispensary
-                owners to manage their inventory, sales, and customer information. Our user-friendly platform is
-                designed to
-                streamline operations and increase efficiency, while also ensuring compliance with industry regulations.
-                With our system, you can focus on what matters most: providing high-quality products and exceptional
-                customer
-                service.
+                Welcome to our CIF Inventory management system website! We provide an all-in-one solution for the Central Instrumentation Facility at IIT Gandhinagar for inventory management. This website can 
+                help CIF administrators to manage their inventory, sales, and customer information. Our user-friendly platform is
+                designed to streamline operations and increase efficiency, while also ensuring compliance with industry regulations.
             </p>
 
             <form method="post" enctype="multipart/form-data">
