--- a/templates/register.html
+++ b/templates/register.html
@@ -43,7 +43,7 @@
                     <img
                       src="https://upload.wikimedia.org/wikipedia/en/thumb/a/a2/IIT_Gandhinagar_Logo.svg/1200px-IIT_Gandhinagar_Logo.svg.png"
                       style="width: 185px" alt="logo" />
-                    <h3 class="mt-1 mb-5 pb-1">Dispensary @IITGN</h3>
+                    <h3 class="mt-1 mb-5 pb-1">CIF Inventory Management</h3>
                   </div>
 
                   <center><label style="color: red; font-weight: bold;">{{ msg }}</label></center>
