--- a/templates/about_us.html
+++ b/templates/about_us.html
@@ -17,7 +17,7 @@
     <!-- font awesome   -->
     <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@700&display=swap" rel="stylesheet">
 
-    <title>Dispensary Management System</title>
+    <title>CIF Inventory Management</title>
 
     <style>
     /* Styles for the page */
