--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,7 +1,7 @@
 <div class="container-fluid" style="font-size: small; background-color: #191825;">
   <footer class="py-3 my-4">
-    <p class="text-center text-white">&copy; The Database Dynamos IIT GN</p>
+    <p class="text-center text-white">&copy; Group 11</p>
     <br>
-    <p class="text-center text-white">CS 432: Databases Project</p>
+    <p class="text-center text-white">CS 331: Computer Networks</p>
   </footer>
 </div>
