--- a/templates/login.html
+++ b/templates/login.html
@@ -29,7 +29,7 @@
   <!-- Bootstrap CSS -->
   <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous"> -->
 
-  <title>Dispensary auth</title>
+  <title>CIF auth</title>
 </head>
 
 <body>
@@ -44,9 +44,9 @@
 
                   <div class="text-center">
                     <img
-                      src="https://upload.wikimedia.org/wikipedia/en/thumb/a/a2/IIT_Gandhinagar_Logo.svg/1200px-IIT_Gandhinagar_Logo.svg.png"
+                      src="{{ url_for('static', filename='iitgnlogo.png') }}"
                       style="width: 185px;" alt="logo">
-                    <h3 class="mt-1 mb-5 pb-1">Dispensary @IITGN</h3>
+                    <h3 class="mt-1 mb-5 pb-1">CIF Inventory Management</h3>
                   </div>
 
                   <center><label style="color: red; font-weight: bold;">{{ msg }}</label></center>
@@ -75,9 +75,9 @@
                     <div class="mb-3">
                       <label for="authority" class="form-label">Select User</label>
                       <select id="authority" name="authority" class="form-select">
-                        <option>doctor</option>
-                        <option>patient</option>
-                        <option>admin</option>
+                        <option>Staff</option>
+                        <option>Visitor</option>
+                        <option>Admin</option>
                       </select>
                     </div>
 
