removed old snapshots

--- a/templates/index.html
+++ b/templates/index.html
@@ -43,8 +43,8 @@
     <div class="hero-content flex-col lg:flex-row gap-8">
 
         <div class="container-fluid" style="text-align: left;">
-            <h1 class="text-5xl font-bold cont" style="font-weight: 2000; line-height: 1.5;">Dispensary Management
-                System</h1>
+            <h1 class="text-5xl font-bold cont" style="font-weight: 2000; line-height: 1.5;">CIF Inventory Management
+                </h1>
 
             <p class="py-6" style="color: #191825; font-weight: 750; font-size: medium; line-height: 2;">
                 Welcome to our CIF Inventory management system website! We provide an all-in-one solution for the Central Instrumentation Facility at IIT Gandhinagar for inventory management. This website can 
