--- a/templates/register.html
+++ b/templates/register.html
@@ -27,7 +27,7 @@
   <!-- Bootstrap CSS -->
   <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous"> -->
 
-  <title>Dispensary auth</title>
+  <title>CIF auth</title>
 </head>
 
 <body>
@@ -41,7 +41,7 @@
                 <div class="card-body p-md-5 mx-md-4">
                   <div class="text-center">
                     <img
-                      src="https://upload.wikimedia.org/wikipedia/en/thumb/a/a2/IIT_Gandhinagar_Logo.svg/1200px-IIT_Gandhinagar_Logo.svg.png"
+                      src="{{ url_for('static', filename='iitgnlogo.png') }}"
                       style="width: 185px" alt="logo" />
                     <h3 class="mt-1 mb-5 pb-1">CIF Inventory Management</h3>
                   </div>
