minor UI changes

--- a/templates/about_us.html
+++ b/templates/about_us.html
@@ -137,12 +137,7 @@
             </h2>
             <div id="panelsStayOpen-collapseOne" class="accordion-collapse collapse show">
                 <div class="accordion-body">
-                    <strong>Our database management system is designed to store, manage, and access data
-                        efficiently. With a user-friendly interface and advanced features,
-                        it allows easy record creation, editing, deletion, report generation, and data trend
-                        analysis. Highly customizable, it can be tailored to specific needs.
-                        Our system helps streamline operations for small business owners, researchers,
-                        and students. We offer reliable, secure, and scalable solutions.</strong>
+                    <strong>We're students at IIT Gandhinagar, working on the Networks (CS 331) project. We have rigorously studied the CIF page, taking inspiration from the Tinkerer's Lab website at IITGN as well as other inventory management systems to develop this website. Our goal was to create a comprehensive inventory management solution specifically designed for the Central Instrumentation Facility. We would like to thank Prof. Sameer Kulkarni and the Teaching Assistants for their guidance and support throughout this project's development.</strong>
                 </div>
             </div>
         </div>
@@ -162,30 +157,26 @@
                         <table>
                             <thead>
                             <tr>
-                                <th>G1</th>
-                                <th>G2</th>
+                                <th>Name</th>
+                                <th>Roll Number</th>
                             </tr>
                             </thead>
                             <tbody>
                             <tr>
-                                <td style="vertical-align: middle;">Yash Adhiya</td>
-                                <td style="vertical-align: middle;">Akshat Shrivastava</td>
-                            </tr>
-                            <tr>
-                                <td style="vertical-align: middle;">Govardhan Ingale</td>
-                                <td style="vertical-align: middle;">Dhakad Bhagat Singh</td>
-                            </tr>
-                            <tr>
-                                <td style="vertical-align: middle;">Aishwarya Omar</td>
-                                <td style="vertical-align: middle;">Mahesh Dange</td>
-                            </tr>
-                            <tr>
-                                <td style="vertical-align: middle;">Ronak Hingonia</td>
                                 <td style="vertical-align: middle;">Yash Kokane</td>
+                                <td style="vertical-align: middle;">20110237</td>
                             </tr>
                             <tr>
-                                <td style="vertical-align: middle;">Ojas Washimkar</td>
-                                <td style="vertical-align: middle;">Shubham Kumar</td>
+                                <td style="vertical-align: middle;">Deepanjali Kumari</td>
+                                <td style="vertical-align: middle;">22110069</td>
+                            </tr>
+                            <tr>
+                                <td style="vertical-align: middle;">Harshita Singh</td>
+                                <td style="vertical-align: middle;">22110299</td>
+                            </tr>
+                            <tr>
+                                <td style="vertical-align: middle;">Anushika Mishra</td>
+                                <td style="vertical-align: middle;">22110029</td>
                             </tr>
                             </tbody>
                         </table>
@@ -203,14 +194,7 @@
             </h2>
             <div id="panelsStayOpen-collapseThree" class="accordion-collapse collapse">
                 <div class="accordion-body">
-                    <strong>We believe that data is the foundation of progress and innovation.
-                        Our passion is to create tools that empower individuals and organizations
-                        to unlock their data's full potential. We aim to design cutting-edge
-                        solutions to address modern data challenges and opportunities.
-                        We strive to stay ahead of emerging trends and technologies to provide
-                        easy and accessible database management for everyone. Our mission is
-                        to make database management efficient and intuitive. Join us on our journey
-                        towards a more data-driven world.</strong>
+                    <strong>We were genuinely interested in learning how a website for inventory management would work in practice, and decided to build our own solution from scratch. This project allowed us to apply our knowledge of database systems, web development, and network programming to create a practical application. The hands-on experience gained through developing this system has deepened our understanding of real-world software development challenges and solutions. We hope this project demonstrates our commitment to creating useful, user-friendly tools that solve practical problems.</strong>
                 </div>
             </div>
         </div>
