--- a/templates/login.html
+++ b/templates/login.html
@@ -2,12 +2,10 @@
 <html lang="en">
 
 <head>
-
+  <!-- Required meta tags -->
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" />
-
   <style>
     .opacity-70 {
       opacity: 0.7;
@@ -25,6 +23,40 @@
       font-weight: bold;
       opacity: 1;
     }
+    
+    .bg-image {
+      height: 100%;
+      background-image: url("{{ url_for('static', filename='bg_login.jpeg') }}");
+      background-position: center;
+      background-size: cover;
+      background-repeat: no-repeat;
+    }
+    
+    .form-control:focus {
+      border-color: #005baa;
+      box-shadow: 0 0 0 0.2rem rgba(0, 91, 170, 0.25);
+    }
+    
+    .btn-primary {
+      background-color: #005baa;
+      border-color: #005baa;
+    }
+    
+    .btn-primary:hover {
+      background-color: #004a8c;
+      border-color: #004a8c;
+    }
+    
+    .btn-outline-danger {
+      color: #dc3545;
+      border-color: #dc3545;
+    }
+    
+    .btn-outline-danger:hover {
+      color: #fff;
+      background-color: #dc3545;
+      border-color: #dc3545;
+    }
   </style>
   <!-- Bootstrap CSS -->
   <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous"> -->
@@ -33,7 +65,7 @@
 </head>
 
 <body>
-  <section class="h-100 gradient-form" style="background-color: #eee;">
+  <section class="h-100 gradient-form" style="background-color: #eee">
     <div class="container py-5 h-100">
       <div class="row d-flex justify-content-center align-items-center h-100">
         <div class="col-xl-10">
@@ -41,70 +73,56 @@
             <div class="row g-0">
               <div class="col-lg-6">
                 <div class="card-body p-md-5 mx-md-4">
-
                   <div class="text-center">
                     <img
                       src="{{ url_for('static', filename='iitgnlogo.png') }}"
-                      style="width: 185px;" alt="logo">
+                      style="width: 185px" alt="logo" />
                     <h3 class="mt-1 mb-5 pb-1">CIF Inventory Management</h3>
                   </div>
 
-                  <center><label style="color: red; font-weight: bold;">{{ msg }}</label></center>
+                  <center><label style="color: red; font-weight: bold;">{{ error }}</label></center>
 
-
-                  <form method="POST">
+                  <form action="{{ url_for('login') }}" method="post">
                     <p>
                       <center>Please login to your account</center>
                     </p>
 
                     <div class="form-outline mb-4">
-                      <label class="form-label" for="form2Example11">Email ID</label>
-                      <input required type="email" name="useremail" placeholder="example@gmail.com" class="form-control"
-                        id="useremail" aria-describedby="emailHelp" />
-
+                      <label class="form-label" for="form2Example11">Username or Email</label>
+                      <input class="form-control" id="username" name="username" type="text" placeholder="Enter Username or Email" class="textbox" />
                     </div>
 
                     <div class="form-outline mb-4">
                       <label class="form-label" for="form2Example22">Password</label>
-                      <input required type="password" name="password" class="form-control" id="password"
-                        placeholder="Enter Your Password " />
-
+                      <input class="form-control" id="password" name="password" type="password" placeholder="Enter Your Password" class="textbox" />
                     </div>
 
-
-                    <div class="mb-3">
-                      <label for="authority" class="form-label">Select User</label>
+                    <div class="form-outline mb-4">
+                      <label class="form-label" for="authority">User authority</label>
                       <select id="authority" name="authority" class="form-select">
-                        <option>Staff</option>
                         <option>Visitor</option>
+                        <option>Staff</option>
                         <option>Admin</option>
                       </select>
                     </div>
 
-
                     <div class="text-center pt-1 mb-5 pb-1">
                       <button type="submit" class="btn btn-primary btn-block fa-lg gradient-custom-2 mb-3"
-                        value="signin">Log in</button>
-                      <!-- <button class="btn btn-primary btn-block fa-lg gradient-custom-2 mb-3" type="button">Log
-                                in</button> -->
-                      <a class="text-muted" href="#!">Forgot password?</a>
+                        value="signin">
+                        Login
+                      </button>
+                      <!-- <a class="text-muted" href="#!">Forgot password?</a> -->
                     </div>
 
                     <div class="d-flex align-items-center justify-content-center pb-4">
                       <p class="mb-0 me-2 mr-2">Don't have an account?</p>
-                      <a href="{{ url_for('register') }}" class="btn btn-outline-danger">Create new</a>
+                      <a href="{{ url_for('register') }}" class="btn btn-outline-danger">Register here</a>
                     </div>
-
                   </form>
-
                 </div>
               </div>
               <div class="col-lg-6 d-flex align-items-center gradient-custom-2">
-
-                <img src="{{ url_for('static', filename='bg_login.jpeg') }}" class="img-fluid opacity-70"
-                  alt="Background Image" />
-                <!-- <div class="centered">Dispensary @IITGN</div> -->
-
+                <div class="bg-image w-100"></div>
               </div>
             </div>
           </div>
