--- a/templates/register.html
+++ b/templates/register.html
@@ -23,6 +23,55 @@
       font-weight: bold;
       opacity: 1;
     }
+    
+    .bg-image {
+      height: 100%;
+      background-image: url("{{ url_for('static', filename='bg_login.jpeg') }}");
+      background-position: center;
+      background-size: cover;
+      background-repeat: no-repeat;
+    }
+    
+    .form-control:focus {
+      border-color: #005baa;
+      box-shadow: 0 0 0 0.2rem rgba(0, 91, 170, 0.25);
+    }
+    
+    .btn-primary {
+      background-color: #005baa;
+      border-color: #005baa;
+    }
+    
+    .btn-primary:hover {
+      background-color: #004a8c;
+      border-color: #004a8c;
+    }
+    
+    .btn-outline-danger {
+      color: #dc3545;
+      border-color: #dc3545;
+    }
+    
+    .btn-outline-danger:hover {
+      color: #fff;
+      background-color: #dc3545;
+      border-color: #dc3545;
+    }
+    
+    .form-select {
+      display: block;
+      width: 100%;
+      padding: 0.375rem 0.75rem;
+      font-size: 1rem;
+      font-weight: 400;
+      line-height: 1.5;
+      color: #212529;
+      background-color: #fff;
+      background-clip: padding-box;
+      border: 1px solid #ced4da;
+      border-radius: 0.25rem;
+      transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+    }
   </style>
   <!-- Bootstrap CSS -->
   <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous"> -->
@@ -46,11 +95,11 @@
                     <h3 class="mt-1 mb-5 pb-1">CIF Inventory Management</h3>
                   </div>
 
-                  <center><label style="color: red; font-weight: bold;">{{ msg }}</label></center>
+                  <center><label style="color: red; font-weight: bold;">{{ error }}</label></center>
 
                   <form action="{{ url_for('register') }}" method="post">
                     <p>
-                      <center>SignUp for a new account</center>
+                      <center>Sign up for a new account</center>
                     </p>
 
                     <div class="form-outline mb-4">
@@ -71,25 +120,11 @@
                         placeholder="Enter Your Password" class="textbox" />
                     </div>
 
-                    <!-- <div class="text-center">
-                              meraaaaaaaaaaaaaaa
-                              <div class="dropdown">
-                                <button class="btn btn-outline-info dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                  Select User
-                                </button>
-                                <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                                  <a class="dropdown-item" href="#">Patient</a>
-                                  <a class="dropdown-item" href="#">Doctor</a>
-                                  <a class="dropdown-item" href="#">Staff</a>
-                                </div>
-                              </div>
-                            </div> -->
-
                     <div class="mb-3">
                       <label for="role" class="form-label">User authority</label>
                       <select id="role" name="role" class="form-select">
-                        <option>Patient</option>
-                        <option>Doctor</option>
+                        <option>Visitor</option>
+                        <option>Staff</option>
                         <option>Admin</option>
                       </select>
                     </div>
@@ -99,8 +134,6 @@
                         value="sign Up">
                         Sign up
                       </button>
-                      <!-- <button class="btn btn-primary btn-block fa-lg gradient-custom-2 mb-3" type="button">Sign up</button> -->
-                      <!-- <a class="text-muted" href="#!">Forgot password?</a> -->
                     </div>
 
                     <div class="d-flex align-items-center justify-content-center pb-4">
@@ -111,9 +144,7 @@
                 </div>
               </div>
               <div class="col-lg-6 d-flex align-items-center gradient-custom-2">
-                <img src="{{ url_for('static', filename='bg_login.jpeg') }}" class="img-fluid opacity-70"
-                  alt="Background Image" />
-                <!-- <div class="centered">Dispensary @IITGN</div> -->
+                <div class="bg-image w-100"></div>
               </div>
             </div>
           </div>
